--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,8 @@
 {% extends 'bootstrap/base.html' %}
 
+
 {% block content %}
-    <h1>What are my thoughts?</h1>
+    <h1>Thought analyzer machine</h1>
     <form action="" method="post" novalidate>
         {{ form.hidden_tag() }}
         <p>
