--- a/templates/home.html
+++ b/templates/home.html
@@ -11,18 +11,40 @@
   </head>
   <body>
     <div class="container">
-      <h1>Wordcount 3000</h1>
-      <form role="form" method='POST' action='/'>
-        <div class="form-group">
-          <input type="text" name="text" class="form-control" id="url-box" placeholder="Enter your thoughts..." style="max-width: 300px;" autofocus required>
+        <div class="row">
+            <div class="col-sm-5 col-sm-offset-1">
+              <h1>Thought Analyzer</h1>
+              <br>
+              <form role="form" method='POST' action='/'>
+                <div class="form-group">
+                  <input type="text" name="text" class="form-control" id="text-box" placeholder="Enter your thoughts..." style="max-width: 300px;" autofocus required>
+                </div>
+                <button type="submit" class="btn btn-default">Submit</button>
+              </form>
+              <br>
+              {% for error in errors %}
+                <h4>{{ error }}</h4>
+              {% endfor %}
+                <br>
+            </div>
         </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
-      <br>
-      {% for error in errors %}
-        <h4>{{ error }}</h4>
-      {% endfor %}
+        <div class="col-sm-5 col-sm-offset-1">
+            {% if results %}
+            <h2>You seem to be in {{ results['sentiment'] }} mood!</h2>
+            <br>
+            <!--<div id="Results">-->
+                <!--<table class="table table-striped" style="max-width: 300px;">-->
+                    <!--{% for result in results %}-->
+                    <!--<tr>-->
+                        <!--</td>-->
+                    <!--</tr>-->
+                    <!--{% endfor %}-->
+                <!--</table>-->
+            <!--</div>-->
+            {% endif %}
+        </div>
     </div>
+    <br><br>
     <script src="//code.jquery.com/jquery-2.2.1.min.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   </body>
