--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Wordcount</title>
+    <title>Analyze your thoughts</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <style>
