--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,6 @@
-<html>
+<html ng-app="ThoughtAnalyzerApp">
   <head>
-    <title>Wordcount</title>
+    <title>Thought Analyzer Machine</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <style>
@@ -9,15 +9,15 @@
       }
     </style>
   </head>
-  <body>
+  <body ng-controller="ThoughtAnalyzerController">
     <div class="container">
         <div class="row">
             <div class="col-sm-5 col-sm-offset-1">
               <h1>Thought Analyzer</h1>
               <br>
-              <form role="form" method='POST' action='/sentiment'>
+              <form role="form" ng-submit="getResults()">
                 <div class="form-group">
-                  <input type="text" name="text" class="form-control" id="text-box" placeholder="Enter your thoughts..." style="max-width: 300px;" autofocus required>
+                  <input type="text" ng-model="text" name="text" class="form-control" id="text-box" placeholder="Enter your thoughts..." style="max-width: 300px;">
                 </div>
                 <button type="submit" class="btn btn-default">Submit</button>
               </form>
@@ -47,5 +47,7 @@
     <br><br>
     <script src="//code.jquery.com/jquery-2.2.1.min.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
+    <script src="{{ url_for('static', filename='main.js') }}"></script>
   </body>
 </html>
