--- a/templates/home.html
+++ b/templates/home.html
@@ -40,6 +40,7 @@
                 </span>
             </div>
             {% endraw %}
+            <img class="col-sm-3 col-sm-offset-4" src="{{ url_for('static', filename='spinner.gif') }}" ng-show="loading">
             <br>
         </div>
     </div>
