--- a/templates/home.html
+++ b/templates/home.html
@@ -10,6 +10,27 @@
     </style>
   </head>
   <body ng-controller="ThoughtAnalyzerController">
+    <div>
+        <nav class="navbar navbar-expand-md">
+            <a class="navbar-brand" href="#">Logo</a>
+            <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#main-navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="main-navigation">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </div>
     <div class="container">
         <div class="row">
             <div class="col-sm-5 col-sm-offset-1">
