--- a/static/main.css
+++ b/static/main.css
@@ -5,7 +5,7 @@ html {
 
 .bg {
   /* The image used */
-  background-image: url("https://mdbootstrap.com/img/Photos/Horizontal/Nature/full page/img(20).jpg");
+  background-image: url("contemplate-monkey-bg.jpg");
   /* Full height */
   height: 100%;
   /* Center and scale the image nicely */
