--- a/templates/home.html
+++ b/templates/home.html
@@ -14,38 +14,41 @@
   <div class="bg">
     <div class="container">
         <div class="row">
-            <div class="col-sm-5 col-sm-offset-1">
-              <h1>Thought Analyzer</h1>
-              <br>
-              <form role="form" ng-submit="getResults()">
-                <div class="form-group">
-                  <input type="text" ng-model="text" name="text" class="form-control" id="text-box" placeholder="Enter your thoughts..." style="max-width: 300px;">
+                <div class="col-md-12" align="center">
+                  <h1>Gauge your mood by typing in your thoughts</h1>
+                  <br>
+
+                  <form role="form" ng-submit="getResults()">
+                    <!--<div class="form-group">-->
+                      <input type="text" ng-model="text" name="text" class="form-control" id="text-box" placeholder="Enter your thoughts..." style="max-width: 300px;">
+                    <!--</div>-->
+                      <!--raw is added so that the jinja template does not process the submiteButtonText part as some variable.
+                      And it is left for angular to process and replace it with the text from main.js-->
+                    {% raw %}
+                    <button type="submit" class="btn btn-primary" ng-disabled="loading">{{ submitButtonText }}</button>
+                    {% endraw %}
+                  </form>
                 </div>
-                  <!--raw is added so that the jinja template does not process the submiteButtonText part as some variable.
-                  And it is left for angular to process and replace it with the text from main.js-->
-                {% raw %}
-                <button type="submit" class="btn btn-primary" ng-disabled="loading">{{ submitButtonText }}</button>
-                {% endraw %}
-              </form>
+        </div>
+        <div class="row">
+                <div class="col-md-3">
+                  {% raw %}
+                  <div id="results">
+                      <span ng-repeat="key in results">
+                          You seem to be in {{ results['sentiment'] }} mood!
+                      </span>
+                  </div>
+                  {% endraw %}
+                  <br>
+                </div>
               <br>
               {% for error in errors %}
                 <h4>{{ error }}</h4>
               {% endfor %}
                 <br>
             </div>
+          </div>
         </div>
-        <div class="col-sm-5 col-sm-offset-1">
-            {% raw %}
-            <div id="results">
-                <span ng-repeat="key in results">
-                    You seem to be in {{ results['sentiment'] }} mood!
-                </span>
-            </div>
-            {% endraw %}
-            <br>
-        </div>
-    </div>
-    </div>
     <script src="//code.jquery.com/jquery-2.2.1.min.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
