remove unwanted tag

--- a/templates/home.html
+++ b/templates/home.html
@@ -15,8 +15,8 @@
     <div class="container">
         <div class="row">
           <div class="col-sm-10 offset-sm-1 text-center">
-            <mat-form-field>
-                <h1 class="text-white">Gauge your mood by typing in your thoughts</h1>
+
+                <h1>Gauge your mood by typing in your thoughts</h1>
                 <br>
                 <form role="form" ng-submit="getResults()">
                   <!--<div class="form-group">-->
@@ -29,7 +29,7 @@
                   <button type="submit" class="btn btn-primary" ng-disabled="loading">{{ submitButtonText }}</button>
               {% endraw %}
                 </form>
-            </mat-form-field>
+
           </div>
         </div>
         <div class="row">
