Make the result section in the same column as the header

--- a/templates/home.html
+++ b/templates/home.html
@@ -33,7 +33,7 @@
           </div>
         </div>
         <div class="row">
-                <div class="col-md-3" align="center">
+                <div class="col-sm-10 offset-sm-1 text-center">
                   {% raw %}
                   <div id="results">
                       <span ng-repeat="key in results">
