--- a/templates/home.html
+++ b/templates/home.html
@@ -11,8 +11,17 @@
     </style>
   </head>
   <body ng-controller="ThoughtAnalyzerController">
+
   <div class="bg">
-    <div class="container">
+      <nav class="navbar navbar-default">
+          <div class="container-fluid">
+              <ul class="nav navbar-nav">
+                  <li><a href="#">How does it work?</a> </li>
+                  <li><a href="#">Try it now</a> </li>
+              </ul>
+            </div>
+      </nav>
+      <div class="container">
         <div class="row">
           <div class="col-sm-10 offset-sm-1 text-center">
 
