Change bg to suit the text color

--- a/static/main.css
+++ b/static/main.css
@@ -5,7 +5,7 @@ html {
 
 .bg {
   /* The image used */
-  background-image: url("contemplate-monkey-bg.jpg");
+  background-image: url("contemplate-bridge-bg.jpg");
   /* Full height */
   height: 100%;
   /* Center and scale the image nicely */
