--- a/templates/home.html
+++ b/templates/home.html
@@ -16,8 +16,9 @@
       <nav class="navbar navbar-default">
           <div class="container-fluid">
               <ul class="nav navbar-nav">
-                  <li><a href="#">How does it work?</a> </li>
-                  <li><a href="#">Try it now</a> </li>
+                  <li><a href="#" style="font-family:georgia,garamond,serif;font-size:18px;font-style:italic;">How does it work?</a> </li>
+                  <li><a href="#" style="font-family:georgia,garamond,serif;font-size:18px;font-style:italic;">Try it now</a> </li>
+                  <li><a href="#" style="font-family:georgia,garamond,serif;font-size:18px;font-style:italic;">github</a> </li>
               </ul>
             </div>
       </nav>
@@ -25,17 +26,17 @@
         <div class="row">
           <div class="col-sm-10 offset-sm-1 text-center">
 
-                <h1>Gauge your mood by typing in your thoughts</h1>
+                <h1 style="font-family:georgia,garamond,serif;font-size:26px;font-style:italic;">Gauge your mood by typing in your thoughts</h1>
                 <br>
                 <form role="form" ng-submit="getResults()">
                   <!--<div class="form-group">-->
-                    <input type="text" ng-model="text" name="text" class="form-control" id="text-box" placeholder="I am feeling..." style="max-width: 900px;">
+                    <input type="text" ng-model="text" name="text" class="form-control" id="text-box" placeholder="I am feeling..." style="font-family:georgia,garamond,serif;font-size:18px;font-style:italic;max-width: 800px;">
                   <!--</div>-->
                     <!--raw is added so that the jinja template does not process the submiteButtonText part as some variable.
                     And it is left for angular to process and replace it with the text from main.js-->
                   <br>
                   {% raw %}
-                  <button type="submit" class="btn btn-primary" ng-disabled="loading">{{ submitButtonText }}</button>
+                  <button type="submit" style="font-family:georgia,garamond,serif;font-size:18px;font-style:italic;max-width: 800px;" class="btn btn-primary" ng-disabled="loading">{{ submitButtonText }}</button>
               {% endraw %}
                 </form>
 
