Change the format of the text and add github link

--- a/templates/home.html
+++ b/templates/home.html
@@ -16,9 +16,9 @@
       <nav class="navbar navbar-default">
           <div class="container-fluid">
               <ul class="nav navbar-nav">
-                  <li><a href="#" style="font-family:georgia,garamond,serif;font-size:18px;font-style:italic;">How does it work?</a> </li>
                   <li><a href="#" style="font-family:georgia,garamond,serif;font-size:18px;font-style:italic;">Try it now</a> </li>
-                  <li><a href="#" style="font-family:georgia,garamond,serif;font-size:18px;font-style:italic;">github</a> </li>
+                  <li><a href="#" style="font-family:georgia,garamond,serif;font-size:18px;font-style:italic;">How does it work?</a> </li>
+                  <li><a href="https://github.com/SiddharthaAnand/thought-classifier" style="font-family:georgia,garamond,serif;font-size:18px;font-style:italic;">github</a> </li>
               </ul>
             </div>
       </nav>
