Move out the lines that are possible | Add font style for the response

--- a/templates/home.html
+++ b/templates/home.html
@@ -46,7 +46,7 @@
                 <div class="col-sm-10 offset-sm-1 text-center">
                   {% raw %}
                   <div id="results">
-                      <span ng-repeat="key in results">
+                      <span ng-repeat="key in results" style="font-family:georgia,garamond,serif;font-size:18px;font-style:italic;max-width: 800px;">
                           You seem to be in {{ results['sentiment'] }} mood!
                       </span>
                   </div>
